rs/type-registry/tests/ui/unsupported_union.stderr
error: Unions are not supported by SailsTypeRegistry
 --> tests/ui/unsupported_union.rs:4:1
  |
4 | union MyUnion {
  | ^^^^^
